Add title, meta, script tag

--- a/HTML_head.html
+++ b/HTML_head.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="description" content="Shakshukah: a dish of poached egg with tomato sauce">
+  <meta charset="UTF-8">
   <title></title>
 </head>
 <body>
