--- a/HTML_head.html
+++ b/HTML_head.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Shakshusha Recipe </title>
   <meta name="description" content="Shakshukah: a dish of poached egg with tomato sauce">
   <meta charset="UTF-8">
-  <title></title>
+  <link href"" ></link>
+  <script type="text/javascript" src="
+      /Users/appacademy/Desktop/W1D5/external_javascript_example.js
+    "></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-12345678-9', 'auto');
+  ga('send', 'pageview');
+</script>
+
 </head>
 <body>
   <header>
@@ -82,8 +96,8 @@
   </section>
 
   <section id="reviews">
-    <h2>Reviews</h2>
-    <form action="/reviews" method="post">
+    <h2 id="reviews">Reviews</h2>
+    <form id="review-form" action="/reviews" method="post">
       <label for="name">Name</label>
       <input id="name" type="text" name="name">
 
